# prachand

./: .gitignore  CMakeLists.txt  README.md
c2server/: CMakeLists.txt  ConfigurationParser.cpp  ConfigurationParser.h  RequestHandler.cpp  RequestHandler.h  main.cpp
controller/: CMakeLists.txt  Commands.cpp  Commands.h  Common.cpp  Common.h  ConfigurationParser.cpp  ConfigurationParser.h  ShellHandler.cpp  ShellHandler.h  main.cpp
payload/: CMakeLists.txt  CommandHandler.cpp  CommandHandler.h  OSWrapper.cpp  OSWrapper.h  config.h  main.cpp  uuid.h
sql/: create_tables.sql
templates/: config_template.json  controller_template.json  enrollment_template.json
